Updated index.html to a very basic layout

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="gunks.css"/>
-        <title>SURV-YAY</title>
-        <header>This is surveys</header>
-        <script>
-            $(function() {
-                $("#header").load("header.html");
-                $("#footer").load("footer.html");
-            });
-        </script>
+        <link rel="stylesheet" href="gunks.css">
+        <title>Surv-YAY</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div id="header"></div>
-        <!--Remaining section-->
-        <div id="footer"></div>
+        <h2>Surveys for everybody</h2>
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="#">Create a Survey</a></li> <!--Making links for now-->
+                    <li><a href="#">Fill a Survey</a></li>
+                    <li><a href="#">View a Survey</a></li>
+                </ul>
+            </nav>
+        </section>
+
+        <footer>
+            <p>Footer</p>
+        </footer>
     </body>
 </html>
