Created css file

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <h2>Surveys for everybody</h2>
-        <section>
-            <nav>
-                <ul>
-                    <li><a href="#">Create a Survey</a></li> <!--Making links for now-->
-                    <li><a href="#">Fill a Survey</a></li>
-                    <li><a href="#">View a Survey</a></li>
-                </ul>
-            </nav>
-        </section>
+        <header>
+            <h2>Welcome, User!</h2>
+        </header>
+        <div class="sidenav">
+            <a href="#create">Create ></a>
+            <a href="#fill">Fill ></a>
+            <a href="#view">View ></a>
+        </div>
 
-        <footer>
-            <p>Footer</p>
-        </footer>
+        <div class="index">
+            <span>Welcome, make a site selection to begin!</span>
+        </div>
+
+
     </body>
 </html>
