added a button to see what it would look like

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <header>
             <h2>Welcome, User!</h2>
+            <button type="button">Logout</button>
         </header>
         <div class="sidenav">
             <a href="#create">Create ></a>
