The login page is looking a little rough, but the important thing is that it exists

--- a/login.html
+++ b/login.html
@@ -3,14 +3,18 @@
     <head>
         <script src="login.js"></script>
         <link rel="stylesheet" href="gunks.css"/>
-        <title>Gunks Login</title>
+        <title>Surv-YAY Login</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <header>
+            Surv-YAY
+        </header>
         <div class="container">
             <div class="main">
-                <h2>Gunks Login Form Validation</h2>
+                <h2>Login</h2>
                 <form id="form_id" method="post" name="myform">
-                    <label>User Name: </label>
+                    <label>Account: </label>
                     <input type="text" name="username" id="username"/>
                     <label>Password: </label>
                     <input type="password" name="password" id="password"/>
