edited create_survey.html for new functionallity

--- a/hannahsFolder/create_question.html
+++ b/hannahsFolder/create_question.html
@@ -1,9 +1,9 @@
-<form id = "createQ" action = "create_question.js">
-    <div class = "form-group">
+<div id = "createQ" action = "create_question.js">
+    <div class = "div-group">
         Create Question: <br>
-        <input type = "question" class = "form-group" id = "question"><br>
+        <input type = "question" class = "div-group" id = "question"><br>
         Type: <br>
-        <input type = "type" class = "form-group" id = "questionType"><br>
+        <input type = "type" class = "div-group" id = "questionType"><br>
         Submit: <br>
         <input type = "button" value = "submit" id = "submit" onClick = "createQuestion()"><br>
     </div>
@@ -23,5 +23,5 @@
             }
         }   
     </script>
-</form>
+</div>
 
