Made sidenav of buttons instead of links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Surv-YAY</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script type="text/javascript" src="fill_select.html"></script>
     </head>
     <body>
         <header>
@@ -12,9 +13,9 @@
             <button type="button">Logout</button>
         </header>
         <div class="sidenav">
-            <a href="#create">Create ></a>
-            <a href="#fill">Fill ></a>
-            <a href="#view">View ></a>
+            <button type="button" id="create">Create ></button>
+            <button type="button" id="fill">Fill ></button>
+            <button type="button" id="view">View ></button>
         </div>
 
         <div class="index">
