Updated gunks.css and added new div to get dimensions down

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <span>Welcome, make a site selection to begin!</span>
         </div>
 
+        <div class="file">
+            <span>Question: </span>
+        </div>
+
 
     </body>
 </html>
