Made a header container for logo
I updates the gunk.css file and my own pages to accommodate the logo alongside the welcome user part and logout button. I kinda broke it a little as the buttons of the sidenav bar had to have its own section in the css, but it'll be fix it later.

--- a/leslieFolder/index.html
+++ b/leslieFolder/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-	<link rel="stylesheet" href="gunks.css">
-        <title>Surv-YAY View Records</title>
+        <link rel="stylesheet" href="gunks.css">
+        <title>Surv-YAY</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="fill_select.html"></script>
+        <script type="text/javascript" src="fill_select.html"></script>
     </head>
     <body>
     <body>
@@ -24,11 +24,13 @@
         </div>
 
         <div class="index">
-            <h1>View Surveys</h1>
-	</div>
-
-	<div class="file">
-            <span>Title | Creator | Created | Description </span>
+            <h1>Welcome, make a site selection to begin!</h1>
         </div>
+
+        <div class="file">
+            <span>Question: </span>
+        </div>
+
+
     </body>
 </html>
