--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>Surv-YAY</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script type="text/javascript" src="fill_select.js"></script>
     </head>
     <body>
         <div class="header"> 
@@ -15,20 +14,60 @@
             <h2>Welcome, User!</h2>
             <button type="button">Logout</button>
         </div>
-        <div class="sidenav">
-            <button type="button" id="create">Create ></button>
-            <button type="button" id="fill" onclick="myFunction()">Fill ></button>
-            <button type="button" id="view">View ></button>
+        <div class="sidenav"> <!--TODO: Make this a dropdown-->
+            <button class="dropdown-btn" id="create">Create >
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="#">Create 1</a>
+                <a href="#">Create 2</a>
+            </div>
+            
+            <button class="dropdown-btn" id="fill">Fill >
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="#">Fill 1</a>
+                <a href="#">Fill 2</a>
+            </div>
+
+            <button class="dropdown-btn" id="view">View >
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+                <a href="#">View 1</a>
+                <a href="#">View 2</a>
+            </div>
         </div>
 
         <div class="index">
             <span>Welcome, make a site selection to begin!</span>
+            <script type="text/javascript" src="fill_select.js"></script>
+            <script type="text/javascript" src="fill_survey.js"></script>
         </div>
 
-        <!--This goes into each individual html file-->
+        <!--This goes into each individual html file
         <div class="file" id="file">
             <span>Question: </span>
-        </div>
+        </div>-->
+
+        <script>
+        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+            var dropdown = document.getElementsByClassName("dropdown-btn");
+            var i;
+                
+            for (i = 0; i < dropdown.length; i++) {
+                dropdown[i].addEventListener("click", function() {
+                    this.classList.toggle("active");
+                    var dropdownContent = this.nextElementSibling;
+                    if (dropdownContent.style.display === "block") {
+                        dropdownContent.style.display = "none";
+                    } else {
+                        dropdownContent.style.display = "block";
+                    }
+                });
+            }
+        </script>
 
     </body>
 </html>
