--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <!--HEADER-->
         <div class="header"> 
             <a href="index.html">
                     <img src="SurvyaySmallLogo.jpg" alt="SurvYay">
@@ -14,32 +15,29 @@
             <h2>Welcome, User!</h2>
             <button type="button">Logout</button>
         </div>
-        <div class="sidenav"> <!--TODO: Make this a dropdown-->
-            <button class="dropdown-btn" id="create">Create >
-                <i class="fa fa-caret-down"></i>
-            </button>
+
+        <!--SIDE NAV-->
+        <div class="sidenav"> 
+            <button class="dropdown-btn" id="create">Create ></button>
             <div class="dropdown-container">
                 <a href="#">Create 1</a>
                 <a href="#">Create 2</a>
             </div>
             
-            <button class="dropdown-btn" id="fill">Fill >
-                <i class="fa fa-caret-down"></i>
-            </button>
+            <button class="dropdown-btn" id="fill">Fill ></button>
             <div class="dropdown-container">
                 <a href="#">Fill 1</a>
                 <a href="#">Fill 2</a>
             </div>
 
-            <button class="dropdown-btn" id="view">View >
-                <i class="fa fa-caret-down"></i>
-            </button>
+            <button class="dropdown-btn" id="view">View ></button>
             <div class="dropdown-container">
                 <a href="#">View 1</a>
                 <a href="#">View 2</a>
             </div>
         </div>
 
+        <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
         <div class="index">
             <span>Welcome, make a site selection to begin!</span>
             <script type="text/javascript" src="fill_select.js"></script>
