Updated the format to set database table
Just a backup for anything before implementing a database with a for loop as necessary

--- a/leslieFolder/view_records.html
+++ b/leslieFolder/view_records.html
@@ -25,10 +25,26 @@
 
         <div class="index">
             <h1> View Records</h1>
-	</div>
-	
-	<div class="file">
-            <span>Creator | Name | Category | Survey </span>
+            <table>
+		<tr>
+    		   <th>Creator</th>
+    		   <th>Name</th>
+    		   <th>Category</th>
+    		   <th>Survey</th>
+  	        </tr>
+	 	<tr>
+  		   <td>Checking</td>
+    		   <td>If</td>
+        	   <td>This</td>
+    		   <td>Works</td>
+  		</tr>
+	 	<tr>
+  		   <td>Checking</td>
+    		   <td>If</td>
+        	   <td>This</td>
+    		   <td>Works</td>
+  		</tr>
+	    </table>
         </div>
     </body>
 </html>
