--- a/leslieFolder/view_surveys.html
+++ b/leslieFolder/view_surveys.html
@@ -24,11 +24,26 @@
         </div>
 
         <div class="index">
-            <h1>View Surveys</h1>
-	</div>
-
-	<div class="file">
-            <span>Title | Creator | Created | Description </span>
-        </div>
+            <h1> View Surveys</h1>
+            <table>
+		<tr>
+    		   <th>Title</th>
+    		   <th>Creator</th>
+    		   <th>Created</th>
+    		   <th>Description</th>
+  	        </tr>
+	 	<tr>
+  		   <td>Checking</td>
+    		   <td>If</td>
+        	   <td>This</td>
+    		   <td>Works</td>
+  		</tr>
+	 	<tr>
+  		   <td>Checking</td>
+    		   <td>If</td>
+        	   <td>This</td>
+    		   <td>Works</td>
+  		</tr>
+	    </table>
     </body>
 </html>
