--- a/leslieFolder/leslieFolder/view_select.html
+++ b/leslieFolder/leslieFolder/view_select.html
@@ -8,18 +8,56 @@
         <script type="text/javascript" src="fill_select.html"></script>
     </head>
     <body>
-	<header>
-            <h2>Welcome, User!</h2>
+	<div class="header"> 
+	    <a href="index.html">
+            	<img src="SurvyaySmallLogo.jpg" alt="SurvYay">
+	    </a>
+	    <h2>Welcome, User!</h2>
 	    <button type="button">Logout</button>
-        </header>
-        <div class="sidenav">
-            <button type="button" id="create">Create ></button>
-            <button type="button" id="fill">Fill ></button>
-            <button type="button" id="view">View ></button>
+        </div>
+
+        <div class="sidenav"> 
+            <button class="dropdown-btn" id="create">Create ></button>
+            <div class="dropdown-container">
+                <a href="#">Create 1</a>
+                <a href="#">Create 2</a>
+            </div>
+            
+            <button class="dropdown-btn" id="fill">Fill ></button>
+            <div class="dropdown-container">
+                <a href="#">Fill 1</a>
+                <a href="#">Fill 2</a>
+            </div>
+
+            <button class="dropdown-btn" id="view">View ></button>
+            <div class="dropdown-container">
+                <a href="view_records.html">Records</a>
+                <a href="view_surveys.html">Surveys</a>
+            </div>
         </div>
 	
+        <script>
+        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+            var dropdown = document.getElementsByClassName("dropdown-btn");
+            var i;
+                
+            for (i = 0; i < dropdown.length; i++) {
+                dropdown[i].addEventListener("click", function() {
+                    this.classList.toggle("active");
+                    var dropdownContent = this.nextElementSibling;
+                    if (dropdownContent.style.display === "block") {
+                        dropdownContent.style.display = "none";
+                    } else {
+                        dropdownContent.style.display = "block";
+                    }
+                });
+            }
+        </script>
+
         <a href="view_records.html" class="viewButton">View Records</a>
 	<a href="view_surveys.html" class="viewButton">View Surveys</a>
-
+	<a href="index.html">
+		<button type="button">&laquo;Back</button>
+	</a>
     </body>
 </html>
