--- a/hannahsFolder/create_question.html
+++ b/hannahsFolder/create_question.html
@@ -1,27 +1,43 @@
-<div id = "createQ" action = "create_question.js">
-    <div class = "div-group">
-        Create Question: <br>
-        <input type = "question" class = "div-group" id = "question"><br>
-        Type: <br>
-        <input type = "type" class = "div-group" id = "questionType"><br>
-        Submit: <br>
-        <input type = "button" value = "submit" id = "submit" onClick = "createQuestion()"><br>
-    </div>
-    <script>
-        function createQuestion(q, qt){
-            var quest = q.value.length;
-            if(quest == 0){
-                alert("Empty question not valid");
-            }else{
-                var question = document.getElementById("createQ");
-            }
-            var questionT = qt.value.length;
-            if(questionT == 0){
-                alert("Empty question type not valid");
-            }else{
-                var questionType = document.getElementById("createQ");
-            }
-        }   
-    </script>
-</div>
+<!DOCTYPE html>
+<html lang = "en">
+<body>
+    <head>
+        <title> Create a Question</title> 
+        <script src = "create_question.js"></script>
+        <meta charset = "utf-8">
+        <meta name = "viewport" content = "width=device-width, initial-scale = 1">
+        <link rel = "stylesheet" href = "gunks.css"/> 
+    </head>
+    <body>
+        <div class = "header">
+            <a href = "index.html">
+                <img src = "SurvyaySmallLogo.jpg" alt = "SurvYay">
+            </a>
+            <h2>Welcome, user!</h2>
+            <button type = "button"> Logout</button>
+        </div>
+
+        <div class="sidenav">
+            <button type="button" id="create">Create ></button>
+            <button type="button" id="fill">Fill ></button>
+            <button type="button" id="view">View ></button>
+        </div>
+
+        <div class = "index">
+            <h1>Create Question</h1>
+        </div>
+
+        <div class = "file">
+            <h2>Create question to add to surveys</h2>
+            <div id = "bar">
+                <h3>Creator | Created | Question </h3>
+            </div>
+            <textarea rows = "4" cols = "50"> 
+            </textarea> 
+            <br>
+            <input type = "text" name = "type"><br>
+        </div>
+    </body>
+</body>
+</html>
 
