--- a/hannahsFolder/create_question.html
+++ b/hannahsFolder/create_question.html
@@ -28,14 +28,13 @@
         </div>
 
         <div class = "file">
-            <h2>Create question to add to surveys</h2>
-            <div id = "bar">
-                <h3>Creator | Created | Question </h3>
-            </div>
+            <label>Question:</label><br><br>
             <textarea rows = "4" cols = "50"> 
             </textarea> 
-            <br>
-            <input type = "text" name = "type"><br>
+            <br><br>
+            <label>Type: </label><br>
+            <input type = "text" name = "type"><br><br>
+            <button type="button" id="Submit">Submit ></button>
         </div>
     </body>
 </body>
