Added the code we have up to date to Master

--- a/view_records.html
+++ b/view_records.html
@@ -25,8 +25,7 @@
             
             <button class="dropdown-btn" id="fill">Fill ></button>
             <div class="dropdown-container">
-                <a href="#">Fill 1</a>
-                <a href="#">Fill 2</a>
+                <a href="fill_survey.html">Surveys</a>
             </div>
 
             <button class="dropdown-btn" id="view">View ></button>
