--- a/hannahsFolder/create_survey.html
+++ b/hannahsFolder/create_survey.html
@@ -1,33 +1,16 @@
-<!DOCTYPE html>
 <html lang = "en">
-<body>
+
     <head>
-        <title> Create a survey</title> 
-        <script src = "create_survey.js"></script>
         <meta charset = "utf-8">
         <meta name = "viewport" content = "width=device-width, initial-scale = 1">
-        <link rel = "stylesheet" href = "gunks.css"/> 
+        <link rel = "stylesheet" href = "css/gunks.css"/> 
     </head>
     <body>
-        <div class = "header">
-            <a href = "index.html">
-                <img src = "SurvyaySmallLogo.jpg" alt = "SurvYay">
-            </a>
-            <h2>Welcome, user!</h2>
-            <button type = "button"> Logout</button>
-        </div>
-
-        <div class="sidenav">
-            <button type="button" id="create">Create ></button>
-            <button type="button" id="fill">Fill ></button>
-            <button type="button" id="view">View ></button>
-        </div>
-
-        <div class = "index">
+        <div>
             <h1>Create a survey</h1>
         </div>
 
-        <div class = "file">
+        <div>
             <h2>Select questions for your survey.</h2>
             <div id = "bar">
                 <h3>Creator | Created | Question </h3>
@@ -52,5 +35,42 @@
             </form>
         </div>
     </body>
-</body>
 </html>
+
+<script>
+    function checkAll() {
+        var checked = document.getElementsByName('checkBoxes');
+        var checkedBoxes = [];
+            for (var i=0; i<checked.length; i++){
+                if (checked[i].checked) {
+                    checkedBoxes.push(checked[i]);
+                }
+            }
+        var fs = require('fs');
+        var data ={};
+        data.table = checkedBoxes;
+        for(var i = 0; i < checkedBoxes.length; i++){
+            var obj = { id: i, checkBox};
+            data.table.push(obj);
+        }
+        fs.writeFile("input.json", JSON.stringify(data), function(err){
+            if(err)throw err;
+            console.log('data');
+        });
+        return checkedBoxes.length > 0 ? checkedBoxes : null;
+    }
+    function searchFunction(){
+        var search = document.getElementId("search");
+        var data = document.getElementId("checkBox");
+        search.onclick = function(){
+            var input = document.getElementById("filterBy");
+            for(var i = 0; i < checkedBoxes.length; i++){
+                if(checkedBoxes[i] == search){
+                    alert(data[i]);
+                }else{
+                    alert("not found");
+                }
+            }
+        }
+    }
+</script>
